--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,26 +91,27 @@ footer {
     margin-top: 40px;
 }
 .projects-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 20px;
-    margin-top: 30px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr); /* 4 colonnes */
+  gap: 20px; /* espace entre les projets */
+  padding: 20px;
 }
 
 .project-card {
-    text-decoration: none;
-    color: inherit;
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    overflow: hidden;
-    transition: transform 0.2s;
-    background-color: #fff;
+  display: block;
+  text-align: center;
+  text-decoration: none;
+  color: inherit;
+  background-color: #f8f8f8;
+  border-radius: 10px;
+  padding: 15px;
+  transition: transform 0.2s;
 }
 
 .project-card img {
-    width: 100%;
-    height: 200px;
-    object-fit: cover;
+  width: 100%;
+  height: auto;
+  border-radius: 8px;
 }
 
 .project-card h3 {
@@ -119,7 +120,7 @@ footer {
 }
 
 .project-card:hover {
-    transform: scale(1.02);
+    transform: scale(1.05);
     border-color: #00ccff;
 }
 
